micro2/aula5/k8s/busca-produto-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: busca-produto
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: busca-produto
