micro2/aula5/k8s/catalogo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: catalogo
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: catalogo
