micro2/aula5/k8s/estoque-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: estoque
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: estoque
