micro2/aula5/k8s/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-servicos
spec:
  ports:
  - port: 3306
  selector:
    app: db-servicos
