micro2/aula5/k8s/precificacao-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: precificacao
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: precificacao
