micro2/aula5/k8s/estoque-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: estoque
spec:
  hosts:
    - estoque
  http:
    - route:
        - destination:
            host: estoque
            port:
              number: 8080
