micro2/aula5/k8s/precificacao-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: precificacao
spec:
  hosts:
    - precificacao
  http:
    - route:
        - destination:
            host: precificacao
            port:
              number: 8080
